# ms-documetacion

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  PATRONES_MICROSERVICIOS.md  README.md  app.py  docker-compose.yml  pyproject.toml  wsgi.py
Documentacion/: CHANGELOG.md  División de Tareas - Microservicio de Documentación.md
Documentacion/Archivos generados/: certificado_alumno_1.docx  certificado_alumno_1.odt
Documentacion/Ejemplos y plantillas/: .env.example  docker-compose.yml.example
app/: __init__.py
app/config/: config.py
app/exceptions/: __init__.py  custom_exceptions.py
app/handlers/: __init__.py  error_handlers.py
app/mapping/: __init__.py  alumno_mapping.py  especialidad_mapping.py  tipodocumento_mapping.py
app/middleware/: __init__.py  error_middleware.py  logging_middleware.py
app/models/: __init__.py  alumno.py  especialidad.py  facultad.py  saga_transaction.py  tipo_documento.py  tipodocumento.py  universidad.py
app/repositories/: __init__.py  alumno_repository.py  especialidad_repository.py  redis_client.py
app/resources/: __init__.py  alumno_resources.py  certificado_resource.py  home.py
app/services/: __init__.py  (+6 more)
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
performance/: README.md  pruebas-k6.md
test/: base_test.py  instancias.py  test_alumno.py  test_app.py  test_error_handlers.py  test_exceptions.py  test_integration.py  test_middleware.py  test_mock_services.py  test_repositories.py  test_repositories_integration.py  test_retry.py  test_services.py  test_validator_alumno.py  test_validator_context.py
(+13 files in other folders)
