[project]
name = "ms-documentacion"
version = "0.1.0"
description = "Microservicio de generación de documentos y certificados académicos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docxtpl==0.20.0",
    "flask==3.1.2",
    "granian>=1.6.0",
    "hiredis>=3.0.0",
    "marshmallow==4.0.1",
    "pyrefly==0.38.2",
    "python-dotenv==1.1.1",
    "python-odt-template==0.5.1",
    "redis>=5.0.0",
    "requests==2.32.5",
    "weasyprint==65.1",
]
